--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ Flask-Cors==5.0.0
 Flask-SQLAlchemy==3.1.1
 fsspec==2024.9.0
 greenlet==3.0.3
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
@@ -15,6 +16,7 @@ mpmath==1.3.0
 networkx==3.3
 nltk==3.9.1
 numpy==2.1.1
+packaging==24.1
 regex==2024.7.24
 SQLAlchemy==2.0.33
 sympy==1.13.2
